apps/bjj/prod/networking/routes/httproute-grafana-prod.yaml
# HTTPRoute pentru accesul la Grafana în mediul prod
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-grafana-prod
  namespace: bjj
spec:
  parentRefs:
  - name: gateway-grafana
    sectionName: https
  hostnames:
  - grafana.cardano.vip
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: monitoring-kube-prometheus-stack-grafana
      namespace: monitoring
      port: 80
